# clawfarm

./: .gitignore  Cargo.toml  Makefile  README.md  ROADMAP.md  SPEC.md  go.mod  go.sum
.github/workflows/: integration.yml
.tmp/integration-001/workspace/: integration-001.txt
cmd/clawfarm/: main.go
cmd/vclaw/: main.go
crates/krunclaw-cli/: Cargo.toml
crates/krunclaw-cli/src/: main.rs
crates/krunclaw-runtime/: Cargo.toml
crates/krunclaw-runtime/src/: doctor.rs  image.rs  lib.rs  run.rs
crates/libkrun-sys/: Cargo.toml
crates/libkrun-sys/src/: lib.rs
integration/: 001-basic.sh  002-cache-instance-copy.sh  003-new-run-ssh.sh
internal/app/: app.go  app_test.go  clawbox_v2.go
internal/clawbox/: spec.go  spec_test.go
internal/cloudinitbuilder/: builder.go
internal/config/: dirs.go
internal/images/: manager.go  manager_test.go  ref.go  ref_test.go
internal/mount/: flock_locker.go  manager.go  manager_test.go
internal/qemubuilder/: builder.go
internal/state/: lock_flock.go  lock_manager.go  lock_manager_test.go  store.go
internal/vm/: backend.go  qemu.go  qemu_test.go
internal/vm/cloudinitbuilder/: builder.go
rfc/: 001-initial-design.md  002-openclaw-full-runtime-requirements.md  003-clawfarm-gui-first-and-clawbox-format.md  004-clawbox-mountable-single-file-format.md  007-minimal-new-workflow.md
rfc/archived/: 001-initial-design.md  003-clawfarm-gui-first-and-clawbox-format.md  004-clawbox-mountable-single-file-format.md  005-clawbox-mount-lifecycle-and-locking.md  006-clawbox-import-export-distribution-first.md
(+1 files in other folders)
