[package]
name = "krunclaw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "krunclaw"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
krunclaw-runtime = { path = "../krunclaw-runtime" }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

